# BirdScreen

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx  Lightbox.tsx  PageHeading.tsx  PageHero.tsx  Sidebar.tsx  StatusError.tsx  TvCard.tsx
frontend/src/components/form/: Button.tsx  Field.tsx  SaveButton.tsx  Section.tsx  TimeInput.tsx  Toggle.tsx  WindowList.tsx  styles.ts
frontend/src/hooks/: useEditableConfig.ts
frontend/src/i18n/: en.ts  index.ts
frontend/src/pages/: Gallery.tsx  Logs.tsx  NotFound.tsx  Placeholder.tsx  Schedule.tsx  Settings.tsx  Status.tsx  Tvs.tsx
scripts/: dev.sh
src/birdscreen/: __init__.py  birdnet.py  config.py  engine.py  gemini.py  generate.py  geocode.py  images.py  labels.py  logging_config.py  pipeline.py  poster.py  samsung_tv.py  season.py  state.py  upscale.py  usage.py  weather.py
src/birdscreen/web/: __init__.py  app.py
tests/: test_engine.py  test_pipeline.py  test_poster.py  test_usage.py  test_weather.py
