[project]
name = "birdscreen"
version = "0.1.0"
description = "Listen for birds with BirdNET, generate a daily poster with Gemini, and display it on a Samsung The Frame TV."
readme = "README.md"
authors = [
    { name = "Jonas Follesø", email = "jonas@follesoe.no" }
]
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.2.0",
    "samsungtvws>=3.0.5",
]

[project.scripts]
birdscreen = "birdscreen:main"
check-tv = "birdscreen.samsung_tv:main"
upload-art = "birdscreen.samsung_tv:upload_main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
